:arrow_up::construction: Add Eslint support and further work on constructing time schema :construction::arrow_up:

--- a/views/list-times.html
+++ b/views/list-times.html
@@ -85,16 +85,16 @@
           href="/times/{{ id }}"
         >
           <h3 class="text-grey-darker uppercase text-base font-normal">
-            {{ startTime }}
+            {{ time.startTime }}
           </h3>
           <p class="text-xl mt-2">
-            {{ distance }}
+            {{ time.distance }}
             <span
               class="uppercase text-sm text-grey-darker font-semibold -ml-1"
             >
               km
             </span>
-            in {{ duration }}
+            in {{ time.duration }}
             <span
               class="uppercase text-sm text-grey-darker font-semibold -ml-1"
             >
