:construction::picard: dev - Add further functionality to create times and ensure user is still logged in once time is posted :picard::construction:

--- a/views/list-times.html
+++ b/views/list-times.html
@@ -85,16 +85,16 @@
           href="/times/{{ id }}"
         >
           <h3 class="text-grey-darker uppercase text-base font-normal">
-            {{ time.startTime }}
+            {{ startTime }}
           </h3>
           <p class="text-xl mt-2">
-            {{ time.distance }}
+            {{ distance }}
             <span
               class="uppercase text-sm text-grey-darker font-semibold -ml-1"
             >
               km
             </span>
-            in {{ time.duration }}
+            in {{ duration }}
             <span
               class="uppercase text-sm text-grey-darker font-semibold -ml-1"
             >
@@ -102,7 +102,7 @@
             </span>
           </p>
           <p class="text-xl mt-1">
-            Avg. speed: {{ avgSpeed }}
+            Avg. speed: {"This app is currently broken}
             <span
               class="uppercase text-sm text-grey-darker font-semibold -ml-1"
             >
