--- a/views/edit-time.html
+++ b/views/edit-time.html
@@ -41,7 +41,7 @@
             class="block rounded bg-grey-lighter p-2 mt-2 w-full"
             type="datetime-local"
             name="startTime"
-            value="{{ time.startTime }}"
+            value="{{ formattedStartTime }}"
             required
           />
         </label>
