--- a/views/list-times.html
+++ b/views/list-times.html
@@ -102,7 +102,7 @@
             </span>
           </p>
           <p class="text-xl mt-1">
-            Avg. speed: {"This app is currently broken}
+            Avg. speed: {"This app is currently broken"}
             <span
               class="uppercase text-sm text-grey-darker font-semibold -ml-1"
             >
