--- a/views/list-times.html
+++ b/views/list-times.html
@@ -11,8 +11,8 @@
   <body class="bg-grey-lightest">
     <header class="fixed pin-x pin-t bg-purple shadow text-white">
       <div
-        class="mx-auto h-16 p-4 flex items-center justify-between"
-        style="width: 800px"
+        class="mx-auto h-16 p-5 flex items-center justify-between"
+        style="width: 1000px"
       >
         <h2>Jog Times</h2>
         <div>
@@ -22,6 +22,12 @@
             class="text-white border border-white rounded p-2 no-underline hover:bg-purple-light ml-4"
           >
             Sign Out
+          </a>
+          <a
+            href="/delete-account"
+            class="text-white border border-white rounded p-2 no-underline hover:bg-purple-light ml-4"
+          >
+            Delete Account
           </a>
         </div>
       </div>
@@ -102,7 +108,7 @@
             </span>
           </p>
           <p class="text-xl mt-1">
-            Avg. speed: {"This app is currently broken"}
+            Avg. speed: {{avgSpeed}}
             <span
               class="uppercase text-sm text-grey-darker font-semibold -ml-1"
             >
