--- a/views/sign-in.html
+++ b/views/sign-in.html
@@ -1,59 +1,50 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Jog Times - Sign In</title>
 
-    <!-- Tailwind.css is a CSS library. Read the docs here: -->
-    <!-- https://tailwindcss.com/docs/what-is-tailwind -->
-    <link rel="stylesheet" href="/tailwind.css" />
-  </head>
-  <body>
-    <main class="h-screen flex flex-col items-center justify-center ">
-      <form
-        class="m-4 shadow-lg rounded-lg overflow-hidden w-64"
-        method="POST"
-        action="/sign-in"
-      >
-        <h1 class="text-2xl bg-grey-lighter p-4">Sign In</h1>
+<head>
+  <meta charset="utf-8" />
+  <title>Jog Times - Sign In</title>
 
-        {{#if errorMessage}}
-        <div class="bg-red-lightest text-red-dark p-4">{{ errorMessage }}</div>
-        {{/if}}
+  <!-- Tailwind.css is a CSS library. Read the docs here: -->
+  <!-- https://tailwindcss.com/docs/what-is-tailwind -->
+  <link rel="stylesheet" href="/tailwind.css" />
+</head>
 
-        <label class="m-4 block">
-          Email Address
-          <input
-            class="block rounded bg-grey-lighter p-2 mt-2 w-full"
-            type="email"
-            name="email"
-            required
-          />
-        </label>
+<body>
+  <header class="fixed pin-x pin-t bg-black shadow text-white">
+    <div class="mx-auto h-16 p-1 flex items-center justify-between" style="width: 1000px">
+      <h2>Jog Times - Sign In</h2>
+    </div>
+  </header>
+  <main class="h-screen flex flex-col items-center justify-center ">
+    <h1 class ="text-2xl text-purple-light font-normal p-4">Hey, good to see you again!</h1>
+    <h5 class ="text text-grey p-4">Login to get going...</h5>
 
-        <label class="m-4 block">
-          Password
-          <input
-            class="block rounded bg-grey-lighter p-2 mt-2 w-full"
-            type="password"
-            name="password"
-            required
-          />
-        </label>
+    <form class="m-4 shadow-lg rounded-lg overflow-hidden w-1/5" method="POST" action="/sign-in">
+      <h1 class="text-2xl bg-grey-dark text-center text-white p-4">Sign In</h1>
 
-        <button
-          type="submit"
-          class="block w-auto rounded bg-purple text-white p-2 m-4 ml-auto"
-        >
-          Sign In →
-        </button>
-      </form>
-      <a
-        href="/create-account"
-        class="block mt-8 text-purple-light no-underline hover:underline"
-      >
-        Create an account
-      </a>
-    </main>
-  </body>
+      {{#if errorMessage}}
+      <div class="bg-red-lightest text-red-dark p-4">{{ errorMessage }}</div>
+      {{/if}}
+
+      <label class="m-4 block">
+        Email Address
+        <input class="block rounded bg-grey-lighter p-2 mt-2 w-full" type="email" name="email" required />
+      </label>
+
+      <label class="m-4 block">
+        Password
+        <input class="block rounded bg-grey-lighter p-2 mt-2 w-full" type="password" name="password" required />
+      </label>
+
+      <button type="submit" class="block w-auto rounded-full bg-purple text-white p-2 m-4 ml-auto">
+        Sign In →
+      </button>
+    </form>
+    <a href="/create-account" class="block mt-8 text-purple-light no-underline hover:underline">
+      Need an account? Create your Jogger account
+    </a>
+  </main>
+</body>
+
 </html>
