:lipstick::construction: Added final routes and pages of app in preparation for additional feature coding work :construction::lipstick:

--- a/views/account-maintenance.html
+++ b/views/account-maintenance.html
@@ -35,8 +35,11 @@
 
     <main
       style="width: 1000px; height: auto"
-      class="mt-16 pt-4 flex flex-col items center justify-center "
+      class="mx-auto mt-16 pt-4 flex flex-col justify-center"
     >
+    <section
+        class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"
+      >
     <form
         class="m-4 shadow-lg rounded-lg overflow-hidden w-64 bg-red"
         method="GET"
@@ -61,7 +64,7 @@
             This action cannot be undone once completed.
         </label>
 
-        <label class="mt-16 ml-4 mr-4 mb-16 bg-black text-white text-center block">
+        <label class="mt-8 ml-4 mr-4 mb-16 bg-black text-white text-center block">
             Click yes if you still want to delete your Jogger account
         </label>
 
@@ -72,6 +75,7 @@
           Delete Account →
         </button>
       </form>
+      </section>
     </main>
   </body>
 </html>
