--- a/views/user-profile.html
+++ b/views/user-profile.html
@@ -57,7 +57,8 @@
         <div
           class="m-4 p-6 rounded-lg bg-indigo flex-1 shadow flex flex-col-reverse"
         >
-        <a class="button rounded-full bg-transparent hover:bg-indigo-light">
+        <a class="button no-underline rounded-full bg-transparent hover:bg-indigo-light"
+        href="/friends">
           <h3 class="mt-6 mb-6 uppercase text-lg text-white text-center font-semibold">
             Your Jogger Friends
           </h3>
@@ -66,9 +67,10 @@
       </section>
       <section class="flex items-center">
           <div
-            class="m-4 p-6 rounded-lg bg-blue-dark flex-1 shadow flex flex-col-reverse"
+            class="m-4 p-6 rounded-lg bg-blue flex-1 shadow flex flex-col-reverse"
           >
-          <a class="button rounded-full bg-transparent hover:bg-blue">
+          <a class="button no-underline rounded-full bg-transparent hover:bg-blue-light"
+          href="/timeline">
             <h3 class="mt-6 mb-6 uppercase text-lg text-white text-center font-semibold">
               Jogger Timeline
             </h3>
@@ -76,9 +78,10 @@
           </div>
   
           <div
-            class="m-4 p-6 rounded-lg bg-yellow-dark flex-1 shadow flex flex-col-reverse"
+            class="m-4 p-6 rounded-lg bg-teal flex-1 shadow flex flex-col-reverse"
           >
-          <a class="button rounded-full bg-transparent hover:bg-yellow">
+          <a class="button no-underline rounded-full bg-transparent hover:bg-teal-light"
+          href="/ranking">
             <h3 class="mt-6 mb-6 uppercase text-lg text-white text-center font-semibold">
               Jogger Ranking
             </h3>
