--- a/views/user-profile.html
+++ b/views/user-profile.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/tailwind.css" />
   </head>
   <body class="bg-grey">
-    <header class="fixed pin-x pin-t bg-grey-darkest shadow text-white">
+    <header class="fixed pin-x pin-t bg-grey-darker shadow text-white">
       <div
         class="mx-auto h-16 p-4 flex items-center justify-between"
         style="width: 1000px"
@@ -19,7 +19,7 @@
           Signed in as {{ user.name }} ({{ user.email }})
           <a
             href="/sign-out"
-            class="text-white bg-purple-dark border border-white rounded p-2 no-underline hover:bg-purple-darkest ml-4"
+            class="text-white bg-grey-darkest border border-white rounded p-2 no-underline hover:bg-black ml-4"
           >
             Sign Out
           </a>
