:lipstick::construction: dev - Add functionality to get individual average speed of a jog time :construction::lipstick:

--- a/views/times.html
+++ b/views/times.html
@@ -92,7 +92,7 @@
           href="/times/{{ id }}"
         >
           <h3 class="text-grey-darker uppercase text-base font-normal">
-            {{ startTime }}
+            {{ date }}
           </h3>
           <p class="text-xl mt-2">
             {{ distance }}
@@ -109,7 +109,7 @@
             </span>
           </p>
           <p class="text-xl mt-1">
-            Avg. speed: {{avgSpeed}}
+            Avg. speed: {{averageSpeed}}
             <span
               class="uppercase text-sm text-grey-darker font-semibold -ml-1"
             >
