--- a/views/friends.html
+++ b/views/friends.html
@@ -38,9 +38,36 @@
       class="mx-auto mt-16 pt-4 flex flex-col justify-center "
     >
 
+    <h2 class="text-center border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"">You are following</h2>
     <section
         class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"
       >
+      {{#each following}}
+      <div
+        class="flex-auto w-64 m-4 p-5 bg-white shadow rounded-lg text-black no-underline"
+      >
+        <h3 class="text-grey-darker uppercase text-base font-normal">
+          {{ name }}
+        </h3>
+            <a class="block w-24 text-center rounded-full bg-purple text-white p-2 m-4 ml-auto hover:bg-purple-dark"
+            href="/members/{{ id }}/unfollow">Unfollow</a>
+      </div>
+      {{/each}}
+      </section>
+
+      <h2 class="text-center border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">Joggers Following You</h2>
+      <section
+        class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"
+      >
+      {{#each following}}
+      <div
+        class="flex-auto w-64 m-4 p-5 bg-white shadow rounded-lg text-black no-underline"
+      >
+        <h3 class="text-grey-darker uppercase text-base font-normal">
+          {{ name }}
+        </h3>
+      </div>
+      {{/each}}
       </section>
     </main>
   </body>
