:lipstick::construction: dev - Added functionality to retrieve and display joggers following the user :construction::lipstick

--- a/views/friends.html
+++ b/views/friends.html
@@ -59,7 +59,7 @@
       <section
         class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"
       >
-      {{#each following}}
+      {{#each followed}}
       <div
         class="flex-auto w-64 m-4 p-5 bg-white shadow rounded-lg text-black no-underline"
       >
