--- a/views/friends.html
+++ b/views/friends.html
@@ -44,12 +44,12 @@
       >
       {{#each following}}
       <div
-        class="flex-auto w-64 m-4 p-5 bg-white shadow rounded-lg text-black no-underline"
+        class="w-1/4 mt-4 mb-4 ml-10 mr-10 p-2 bg-white shadow rounded-lg text-center text-black no-underline"
       >
         <h3 class="text-grey-darker uppercase text-base font-normal">
           {{ name }}
         </h3>
-            <a class="block w-24 text-center rounded-full bg-purple text-white p-2 m-4 ml-auto hover:bg-purple-dark"
+            <a class="block no-underline w-24 text-center rounded-full bg-indigo text-white p-2 mt-4 ml-auto hover:bg-indigo-darkest"
             href="/members/{{ id }}/unfollow">Unfollow</a>
       </div>
       {{/each}}
@@ -61,7 +61,7 @@
       >
       {{#each followed}}
       <div
-        class="flex-auto w-64 m-4 p-5 bg-white shadow rounded-lg text-black no-underline"
+        class="w-1/4 mt-4 mb-4 ml-10 mr-10 p-2 bg-white shadow rounded-lg text-center text-black no-underline"
       >
         <h3 class="text-grey-darker uppercase text-base font-normal">
           {{ name }}
