:lipstick::construction: dev - Added unique index to all three collections to ensure duplicate records cannot be created and coded in appropriate catch errors and messages to confirm to user :construction::lipstick:

--- a/views/create-time.html
+++ b/views/create-time.html
@@ -41,6 +41,10 @@
       >
         <h1 class="text-2xl text-white bg-black text-center p-4">Add new time</h1>
 
+        {{#if errorMessage}}
+        <div class="bg-red-lightest text-red-dark p-4">{{ errorMessage }}</div>
+        {{/if}}
+
         <label class="m-4 block">
           Date
           <input
