--- a/views/create-account.html
+++ b/views/create-account.html
@@ -22,6 +22,10 @@
       >
         <h1 class="text-2xl bg-grey-dark text-center text-white p-4">Create Account</h1>
 
+        {{#if errorMessage}}
+      <div class="bg-red-lightest text-red-dark p-4">{{ errorMessage }}</div>
+      {{/if}}
+
         <label class="m-4 block">
           Name
           <input
