--- a/views/edit-time.html
+++ b/views/edit-time.html
@@ -41,6 +41,10 @@
       >
         <h1 class="text-2xl text-white p-4 bg-black text-center">Edit time</h1>
 
+        {{#if errorMessage}}
+        <div class="bg-red-lightest text-red-dark p-4">{{ errorMessage }}</div>
+        {{/if}}
+
         <label class="m-4 block">
           Date
           <input
