:fire: dev - Remove unnecessary console.logs :fire:

--- a/views/members.html
+++ b/views/members.html
@@ -50,7 +50,8 @@
             {{ name }}
           </h3>
               <a class="block no-underline w-24 text-center rounded-full bg-orange-dark text-white p-2 mt-4 ml-auto hover:bg-orange-darkest"
-              href="/members/{{ id }}/follow">Follow</a>
+              href="/members/{{ id }}/follow">Follow
+            </a>
         </div>
         {{/each}}
       </section>
