--- a/views/timeline.html
+++ b/views/timeline.html
@@ -42,18 +42,15 @@
         class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"
       >
 
-        {{#each friends}}
-        <a
-          class="flex-auto w-64 m-4 p-5 bg-white shadow rounded-lg text-black no-underline"
-          href="/timeline"
-        >
+        {{#each followedUsers}}
+        <div
+        class="w-1/4 mt-4 mb-4 ml-10 mr-10 p-2 bg-white shadow rounded-lg text-center text-black no-underline"
+      >
           <h3 class="text-grey-darker uppercase text-base font-normal">
             {{ name }}
           </h3>
-          <p class="text-xl mt-2">
-            {{ email }}
-          </p>
         </a>
+        </div>
         {{/each}}
       </section>
     </main>
