:lipstick::construction::picard: dev - Rework routes to handle when user is followed so that user is no longer displayed in members not followed list to remove potential error to follow someone twice :picard::construction::lipstick:

--- a/views/sign-in.html
+++ b/views/sign-in.html
@@ -17,7 +17,7 @@
     </div>
   </header>
   <main class="h-screen flex flex-col items-center justify-center ">
-    <h1 class ="text-2xl text-purple-light font-normal p-4">Hey, good to see you again!</h1>
+    <h1 class ="text-2xl text-purple-light font-semibold p-4">Hey, good to see you again!</h1>
     <h5 class ="text text-grey p-4">Login to get going...</h5>
 
     <form class="m-4 shadow-lg rounded-lg overflow-hidden w-1/5" method="POST" action="/sign-in">
