--- a/views/friends.html
+++ b/views/friends.html
@@ -46,7 +46,7 @@
       <div
         class="w-1/4 mt-4 mb-4 ml-10 mr-10 p-2 bg-white shadow rounded-lg text-center text-black no-underline"
       >
-        <h3 class="text-grey-darker uppercase text-base font-normal">
+        <h3 class="text-grey-darker uppercase text-base font-semibold">
           {{ name }}
         </h3>
             <a class="block no-underline w-24 text-center rounded-full bg-indigo text-white p-2 mt-4 ml-auto hover:bg-indigo-darkest"
@@ -63,7 +63,7 @@
       <div
         class="w-1/4 mt-4 mb-4 ml-10 mr-10 p-2 bg-white shadow rounded-lg text-center text-black no-underline"
       >
-        <h3 class="text-grey-darker uppercase text-base font-normal">
+        <h3 class="text-grey-darker uppercase text-base font-semibold">
           {{ name }}
         </h3>
       </div>
