--- a/views/times.html
+++ b/views/times.html
@@ -91,7 +91,7 @@
           class="flex-auto w-64 m-4 p-5 bg-white shadow rounded-lg text-black no-underline"
           href="/times/{{ id }}"
         >
-          <h3 class="text-grey-darker uppercase text-base font-normal">
+          <h3 class="text-grey-darker uppercase text-base font-semibold">
             {{ date }}
           </h3>
           <p class="text-xl mt-2">
