:lipstick::construction: dev - Update to ensure user account name email and password can be updated and any errors are handled with duplicate data or non-matching passwords :construction::lipstick:

--- a/views/edit-time.html
+++ b/views/edit-time.html
@@ -82,7 +82,7 @@
           type="submit"
           class="block w-auto rounded-full bg-purple text-white p-2 m-4 ml-auto hover:bg-purple-dark"
         >
-          Create Time →
+          Update Time →
         </button>
       </form>
       <a
