--- a/views/timeline.html
+++ b/views/timeline.html
@@ -28,6 +28,8 @@
 
   <main style="width: 1000px; height: auto" class="mx-auto mt-16 pt-4 flex flex-col justify-center ">
 
+    <h2 class="text-center border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">Jogger Friends Timeline</h2>
+
     <section class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">
 
       {{#each usersWithTimes}}
