--- a/views/user-profile.html
+++ b/views/user-profile.html
@@ -92,9 +92,9 @@
             class="m-4 p-6 rounded-lg bg-red flex-1 shadow flex flex-col-reverse"
           >
           <a class="button no-underline rounded-full bg-transparent hover:bg-red-light"
-          href="/account-maintenance">
+          href="/edit-account">
             <h3 class="mt-6 mb-6 uppercase text-lg text-white text-center font-semibold">
-              Account Maintenance
+              Edit Account
             </h3>
           </a>
           </div>
