--- a/views/edit-account.html
+++ b/views/edit-account.html
@@ -2,54 +2,73 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Jog Times - Create Account</title>
+    <title>Jogger</title>
 
     <!-- Tailwind.css is a CSS library. Read the docs here: -->
     <!-- https://tailwindcss.com/docs/what-is-tailwind -->
     <link rel="stylesheet" href="/tailwind.css" />
   </head>
-  <body>
-      <header class="fixed pin-x pin-t bg-purple shadow text-white">
-          <div class="mx-auto h-16 p-1 flex items-center justify-between" style="width: 1000px">
-            <h2>Jogger - Create Account</h2>
-          </div>
-        </header>
-    <main class="h-screen flex flex-col items-center justify-center ">
+  <body class="bg-grey">
+    <header class="fixed pin-x pin-t bg-red shadow text-white">
+      <div
+        class="mx-auto h-16 p-5 flex items-center justify-between"
+        style="width: 1000px"
+      >
+        <h2 class="p-4 uppercase bg-red-dark border border-white">Jogger - Account</h2>
+        <div>
+          Signed in as {{ user.name }} ({{ user.email }})
+          <a
+            href="/sign-out"
+            class="text-white bg-red-dark border border-white rounded p-2 no-underline hover:bg-green-darkest ml-4"
+          >
+            Sign Out
+          </a>
+          <a
+            href="/user"
+            class="text-white bg-red-dark border border-white rounded p-2 no-underline hover:bg-green-darkest ml-4"
+          >
+            Launchpad
+          </a>
+        </div>
+      </div>
+    </header>
+
+    <main class="h-screen flex flex-col items-center justify-center">
       <form
         class="m-4 shadow-lg rounded-lg overflow-hidden w-1/5"
         method="POST"
-        action="/create-account"
+        action="/edit-account"
       >
-        <h1 class="text-2xl bg-grey-dark text-center text-white p-4">Create Account</h1>
+        <h1 class="text-2xl bg-grey-dark text-center text-white p-4">Edit Account</h1>
 
         {{#if errorMessage}}
       <div class="bg-red-lightest text-red-dark p-4">{{ errorMessage }}</div>
       {{/if}}
 
         <label class="m-4 block">
-          Name
+          Update Name
           <input
             class="block rounded bg-grey-lighter p-2 mt-2 w-full"
             type="text"
             name="name"
-            value="{{ name }}"
+            value="{{ user.name }}"
             required
           />
         </label>
 
         <label class="m-4 block">
-          Email Address
+          Update Email Address
           <input
             class="block rounded bg-grey-lighter p-2 mt-2 w-full"
             type="email"
             name="email"
-            value="{{ email }}"
+            value="{{ user.email }}"
             required
           />
         </label>
 
         <label class="m-4 block">
-          Password
+          Change Password
           <input
             class="block rounded bg-grey-lighter p-2 mt-2 w-full"
             type="password"
@@ -59,7 +78,7 @@
         </label>
 
         <label class="m-4 block">
-          Confirm Password
+          Confirm Changed Password
           <input
             class="block rounded bg-grey-lighter p-2 mt-2 w-full"
             type="password"
@@ -72,15 +91,15 @@
           type="submit"
           class="block w-auto rounded-full bg-purple text-white p-2 m-4 ml-auto"
         >
-          Create Account →
+          Update Account →
         </button>
       </form>
-
-      <a
-        href="/sign-in"
-        class="block mt-8 text-purple-light no-underline hover:underline"
-        >Already have a Jogger account? Sign in here</a
-      >
+    <a
+    href="/delete-account"
+    class="block no-underline w-auto rounded-full bg-red text-white p-2 m-4 hover:bg-red-dark"
+        >
+          Delete Account →
+  </a>
     </main>
   </body>
 </html>
