--- a/views/friends.html
+++ b/views/friends.html
@@ -61,7 +61,7 @@
       >
       {{#each followed}}
       <div
-        class="w-1/4 mt-4 mb-4 ml-10 mr-10 p-12 bg-white shadow rounded-lg text-center text-black no-underline"
+        class="w-1/4 mt-4 mb-4 ml-10 mr-10 pt-10 pb-12 bg-white shadow rounded-lg text-center text-black no-underline"
       >
         <h3 class="text-grey-darker uppercase text-base font-semibold">
           {{ name }}
