--- a/views/timeline.html
+++ b/views/timeline.html
@@ -34,16 +34,16 @@
 
       {{#each usersWithTimes}}
       <div class="w-1/4 mt-4 mb-4 ml-10 mr-10 p-2 bg-white shadow rounded-lg text-center text-black no-underline">
-        <h3 class="text-grey-darker uppercase text-base font-bold">
+        <h3 class="pt-4 text-black uppercase text-base font-bold">
           {{ name }}
         </h3>
         <section class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">
         </section>
         {{#each times}}
-        <h3 class="text-grey-darker uppercase text-base font-semibold">
+        <h3 class="text-green-dark uppercase text-base font-semibold">
           {{ date }}
         </h3>
-        <p class="text-xl mt-2">
+        <p class="text-blue font-semibold text-xl mt-2">
           {{ distance }}
           <span class="uppercase text-sm text-grey-darker font-semibold -ml-1">
             km
@@ -53,7 +53,7 @@
             hrs
           </span>
         </p>
-        <p class="pt-2 pb-2 text-xl mt-1">
+        <p class="text-purple text-xl mt-1">
           Avg. speed: {{averageSpeed}}
           <span class="uppercase text-sm text-grey-darker font-semibold -ml-1">
             km/hr
