--- a/views/times.html
+++ b/views/times.html
@@ -89,7 +89,7 @@
       >
         <a
           href="/times/new"
-          class="w-1/4 mt-4 mb-4 ml-10 mr-10 p-2 bg-green-dark shadow rounded-lg text-3xl text-white 
+          class="w-1/4 mt-4 mb-4 ml-10 mr-10 pt-8 pb-10 bg-green-dark shadow rounded-lg text-3xl text-white 
           no-underline flex items-center justify-center text-center hover:bg-green-darkest"
         >
           Add new time
