--- a/views/sign-in.html
+++ b/views/sign-in.html
@@ -10,18 +10,18 @@
   <link rel="stylesheet" href="/tailwind.css" />
 </head>
 
-<body>
-  <header class="fixed pin-x pin-t bg-black shadow text-white">
+<body class="bg-grey">
+  <header class="fixed pin-x pin-t bg-grey-darkest shadow text-white">
     <div class="mx-auto h-16 p-1 flex items-center justify-between" style="width: 1000px">
-      <h2>Jog Times - Sign In</h2>
+      <h2 class="p-4 uppercase bg-black border border-white">Jog Times - Sign In</h2>
     </div>
   </header>
   <main class="h-screen flex flex-col items-center justify-center ">
-    <h1 class ="text-2xl text-purple-light font-semibold p-4">Hey, good to see you again!</h1>
-    <h5 class ="text text-grey p-4">Login to get going...</h5>
+    <h1 class ="text-2xl text-white bg-purple rounded-full font-bold p-4">Welcome to your Jogger App!</h1>
+    <h5 class ="text-sm text-white bg-indigo w-1/6 text-center rounded-b-full p-4 mb-10">Sign-in to get going...</h5>
 
-    <form class="m-4 shadow-lg rounded-lg overflow-hidden w-1/5" method="POST" action="/sign-in">
-      <h1 class="text-2xl bg-grey-dark text-center text-white p-4">Sign In</h1>
+    <form class="m-4 shadow-lg bg-grey-dark rounded-lg overflow-hidden w-1/5" method="POST" action="/sign-in">
+      <h1 class="text-2xl bg-black text-center text-white p-4">Sign In</h1>
 
       {{#if errorMessage}}
       <div class="bg-red-lightest text-red-dark p-4">{{ errorMessage }}</div>
@@ -29,20 +29,20 @@
 
       <label class="m-4 block">
         Email Address
-        <input class="block rounded bg-grey-lighter p-2 mt-2 w-full" type="email" name="email" required />
+        <input class="block rounded bg-grey-lightest p-2 mt-2 w-full" type="email" name="email" required />
       </label>
 
       <label class="m-4 block">
         Password
-        <input class="block rounded bg-grey-lighter p-2 mt-2 w-full" type="password" name="password" required />
+        <input class="block rounded bg-grey-lightest p-2 mt-2 w-full" type="password" name="password" required />
       </label>
 
-      <button type="submit" class="block w-auto rounded-full bg-purple text-white p-2 m-4 ml-auto">
+      <button type="submit" class="block w-auto rounded-full bg-purple text-white p-2 m-4 ml-auto hover:bg-purple-darkest">
         Sign In →
       </button>
     </form>
-    <a href="/create-account" class="block mt-8 text-purple-light no-underline hover:underline">
-      Need an account? Create your Jogger account
+    <a href="/create-account" class="bg-indigo block mt-8 text-white p-4 rounded-full no-underline hover:bg-indigo-darkest">
+      Need a Jogger account? Create one here
     </a>
   </main>
 </body>
