--- a/views/timeline.html
+++ b/views/timeline.html
@@ -36,6 +36,9 @@
       <div class="w-1/4 mt-4 mb-4 ml-10 mr-10 p-2 bg-white shadow rounded-lg text-center text-black no-underline">
         <h3 class="pt-4 text-black uppercase text-base font-bold">
           {{ name }}
+          <span class="text-black uppercase text-base font-bold -ml-1">'s</span>
+        </h3>
+        <h3 class="pt-4 text-grey-darker uppercase text-base font-semibold">Jogger Times
         </h3>
         <section class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">
         </section>
