--- a/views/ranking.html
+++ b/views/ranking.html
@@ -32,72 +32,79 @@
 
     <section class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">
 
-        <div class="w-1/3">
-          <h3 class="pt-4 pb-4 text-black text-center uppercase text-base font-semibold">Total Distance Ladder
-            </h3>
-
-      {{#each sortedByDistance}}
-      <div class="w-64 mt-4 mb-4 ml-10 mr-10 p-2 bg-white shadow rounded-lg text-center text-black no-underline">
-        <h3 class="pt-4 pb-4 text-black uppercase text-base font-bold">
-          {{ name }}
+      <div class="w-1/3">
+        <h3 class="pt-4 pb-4 text-black text-center uppercase text-base font-semibold">Total Distance Ladder
         </h3>
-        <section class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">
-          <h3 class="uppercase text-sm text-center text-indigo font-semibold">
-            Total Distance
+
+        {{#each sortedByDistance}}
+        <div class="w-64 mt-4 mb-4 ml-10 mr-10 p-2 bg-white shadow rounded-lg text-center text-black no-underline">
+          <h3 class="pt-4 pb-4 text-black uppercase text-base font-bold">
+            {{ name }}
           </h3>
-          <div class="text-5xl text-indigo font-semibold">
-            {{ stats.totalDistance }}
-            <span class="text-grey-dark uppercase text-base -ml-2">km</span>
-          </div>
           <section class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">
-          </section>
-      </div>
-      {{/each}}
-    </div>
-
-    <div class="w-1/3">
-<h3 class="pt-4 pb-4 text-black text-center uppercase text-base font-semibold">Total Time Ladder
+            <h3 class="mx-auto mb-4 uppercase text-sm text-center text-indigo font-semibold">
+              Total Distance
             </h3>
-      {{#each sortedByTime}}
-      <div class="w-64 mt-4 mb-4 ml-10 mr-10 p-2 bg-white shadow rounded-lg text-center text-black no-underline">
-        <h3 class="pt-4 pb-4 text-black uppercase text-base font-bold">
-          {{ name }}
+            <div class="mx-auto text-5xl text-indigo font-semibold">
+              {{ stats.totalDistance }}
+              <span class="text-grey-dark uppercase text-base -ml-2">km</span>
+            </div>
+            <section class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">
+            </section>
+        </div>
+        {{/each}}
+      </div>
+
+      <div class="w-1/3">
+        <h3 class="pt-4 pb-4 text-black text-center uppercase text-base font-semibold">Total Time Ladder
         </h3>
-        <section class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">
-            <h3 class="uppercase text-sm text-center text-blue font-semibold">
-               Total Jogging Time
+        {{#each sortedByTime}}
+        <div class="w-64 mt-4 mb-4 ml-10 mr-10 p-2 bg-white shadow rounded-lg text-center text-black no-underline">
+          <h3 class="pt-4 pb-4 text-black uppercase text-base font-bold">
+            {{ name }}
+          </h3>
+          <section class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">
+            <h3 class="mx-auto mb-4 uppercase text-sm text-center text-blue font-semibold">
+              Total Jogging Time
+            </h3>
+            <div class="mx-auto text-5xl text-blue font-semibold">
+              {{ stats.totalTime }}
+              <span class="text-grey-dark uppercase text-base -ml-2">hrs</span>
+            </div>
+            <section class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">
+            </section>
+        </div>
+        {{/each}}
+      </div>
+
+      <div class="w-1/3">
+        <h3 class="pt-4 pb-4 text-black text-center uppercase text-base font-semibold">Average Speed Ladder
+        </h3>
+        {{#each sortedByAverage}}
+        <div class="w-64 mt-4 mb-4 ml-10 mr-10 p-2 bg-white shadow rounded-lg text-center text-black no-underline">
+          <h3 class="pt-4 pb-4 text-black uppercase text-base font-bold">
+            {{ name }}
+          </h3>
+          <section class="flex flex-wrap border text-center border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">
+            <h3 class="mx-auto mb-4 uppercase text-sm text-teal-light font-semibold">
+              Average Speed
+            </h3>
+            <div class="mx-auto text-5xl text-teal font-semibold">
+              {{ stats.avgSpeed }}
+              <span class="text-grey-dark uppercase text-base -ml-2">km/h</span>
+            </div>
+            <h3 class="mx-auto mb-4 uppercase text-sm text-teal-light font-semibold">
+                Current Distance Ranking
               </h3>
-              <div class="text-5xl text-blue font-semibold">
-                  {{ stats.totalTime }}
-                  <span class="text-grey-dark uppercase text-base -ml-2">hrs</span>
-                </div>
-          <section class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">
-          </section>
+            <div class="mx-auto text-5xl text-teal font-semibold">
+                {{ ranks }}
+                <span class="text-grey-dark uppercase text-base -ml-2">km/h</span>
+              </div>
+            <section class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">
+            </section>
+        </div>
+        {{/each}}
       </div>
-      {{/each}}
-    </div>
-
-    <div class="w-1/3">
-<h3 class="pt-4 pb-4 text-black text-center uppercase text-base font-semibold">Average Speed Ladder
-            </h3>
-      {{#each sortedByAverage}}
-      <div class="w-64 mt-4 mb-4 ml-10 mr-10 p-2 bg-white shadow rounded-lg text-center text-black no-underline">
-        <h3 class="pt-4 pb-4 text-black uppercase text-base font-bold">
-          {{ name }}
-        </h3>
-        <section class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">
-          <h3 class="uppercase text-sm text-teal-light font-semibold">
-            Average Speed
-          </h3>
-          <div class="text-5xl text-teal font-semibold">
-            {{ stats.avgSpeed }}
-            <span class="text-grey-dark uppercase text-base -ml-2">km/h</span>
-          </div>
-          <section class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">
-          </section>
-      </div>
-      {{/each}}
-    </div>
     </section>
   </main>
 </body>
