:lipstick::construction: dev - Allow entry and handling of non-whole numbers for time and duration of jogs and render to 2 decimal places. Further improvement of app display and routing :construction::lipstick:

--- a/views/create-time.html
+++ b/views/create-time.html
@@ -59,7 +59,7 @@
           Distance (km)
           <input
             class="block rounded bg-grey-lightest p-2 mt-2 w-full"
-            type="number"
+            type="float"
             name="distance"
             required
           />
@@ -69,7 +69,7 @@
           Duration (hrs)
           <input
             class="block rounded bg-grey-lightest p-2 mt-2 w-full"
-            type="number"
+            type="float"
             name="duration"
             required
           />
