--- a/views/edit-time.html
+++ b/views/edit-time.html
@@ -60,7 +60,7 @@
           Distance (km)
           <input
             class="block rounded bg-grey-lightest p-2 mt-2 w-full"
-            type="number"
+            type="float"
             name="distance"
             value="{{ time.distance }}"
             required
@@ -71,7 +71,7 @@
           Duration (hrs)
           <input
             class="block rounded bg-grey-lightest p-2 mt-2 w-full"
-            type="number"
+            type="float"
             name="duration"
             value="{{ time.duration }}"
             required
