--- a/views/friends.html
+++ b/views/friends.html
@@ -50,7 +50,7 @@
           {{ name }}
         </h3>
             <a class="block no-underline w-24 text-center rounded-full bg-indigo text-white p-2 mt-4 ml-auto hover:bg-indigo-darkest"
-            href="/members/{{ id }}/unfollow">Unfollow</a>
+            href="/friends/{{ id }}/unfollow">Unfollow</a>
       </div>
       {{/each}}
       </section>
