--- a/views/ranking.html
+++ b/views/ranking.html
@@ -33,7 +33,7 @@
     <section class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">
 
       <div class="w-1/3">
-        <h3 class="pt-4 pb-4 text-black text-center uppercase text-base font-semibold">Total Distance Ladder
+        <h3 class="pt-4 pb-4 rounded-full ml-8 mr-8 bg-indigo-lightest text-black text-center uppercase text-base font-semibold">Total Distance Ladder
         </h3>
 
         {{#each sortedByDistance}}
@@ -56,7 +56,7 @@
       </div>
 
       <div class="w-1/3">
-        <h3 class="pt-4 pb-4 text-black text-center uppercase text-base font-semibold">Total Time Ladder
+        <h3 class="pt-4 pb-4 rounded-full ml-8 mr-8 bg-blue-lightest text-black text-center uppercase text-base font-semibold">Total Time Ladder
         </h3>
         {{#each sortedByTime}}
         <div class="w-64 mt-4 mb-4 ml-10 mr-10 p-2 bg-white shadow rounded-lg text-center text-black no-underline">
@@ -78,7 +78,7 @@
       </div>
 
       <div class="w-1/3">
-        <h3 class="pt-4 pb-4 text-black text-center uppercase text-base font-semibold">Average Speed Ladder
+        <h3 class="pt-4 pb-4 rounded-full ml-8 mr-8 bg-teal-lightest text-black text-center uppercase text-base font-semibold">Average Speed Ladder
         </h3>
         {{#each sortedByAverage}}
         <div class="w-64 mt-4 mb-4 ml-10 mr-10 p-2 bg-white shadow rounded-lg text-center text-black no-underline">
@@ -93,15 +93,6 @@
               {{ stats.avgSpeed }}
               <span class="text-grey-dark uppercase text-base -ml-2">km/h</span>
             </div>
-            <h3 class="mx-auto mb-4 uppercase text-sm text-teal-light font-semibold">
-                Current Distance Ranking
-              </h3>
-            <div class="mx-auto text-5xl text-teal font-semibold">
-                {{ ranks }}
-                <span class="text-grey-dark uppercase text-base -ml-2">km/h</span>
-              </div>
-            <section class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">
-            </section>
         </div>
         {{/each}}
       </div>
