:construction: dev - Add code to render followed user timeline in alphabetical order :construction:

--- a/views/ranking.html
+++ b/views/ranking.html
@@ -37,8 +37,8 @@
         </h3>
 
         {{#each sortedByDistance}}
-        <div class="w-64 mt-4 mb-4 ml-10 mr-10 p-2 bg-white shadow rounded-lg text-center text-black no-underline">
-          <h3 class="pt-4 pb-4 text-black uppercase text-base font-bold">
+        <div class="w-64 mt-6 mb-4 ml-10 mr-10 p-2 bg-white shadow rounded-lg text-center text-black no-underline">
+          <h3 class="pt-4 pb-4 bg-indigo-lightest rounded-full text-black uppercase text-base font-bold">
             {{ name }}
           </h3>
           <section class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">
@@ -59,8 +59,8 @@
         <h3 class="pt-4 pb-4 rounded-full ml-8 mr-8 bg-blue-lightest text-black text-center uppercase text-base font-semibold">Total Time Ladder
         </h3>
         {{#each sortedByTime}}
-        <div class="w-64 mt-4 mb-4 ml-10 mr-10 p-2 bg-white shadow rounded-lg text-center text-black no-underline">
-          <h3 class="pt-4 pb-4 text-black uppercase text-base font-bold">
+        <div class="w-64 mt-6 mb-4 ml-10 mr-10 p-2 bg-white shadow rounded-lg text-center text-black no-underline">
+          <h3 class="pt-4 pb-4 bg-blue-lightest rounded-full text-black uppercase text-base font-bold">
             {{ name }}
           </h3>
           <section class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">
@@ -81,8 +81,8 @@
         <h3 class="pt-4 pb-4 rounded-full ml-8 mr-8 bg-teal-lightest text-black text-center uppercase text-base font-semibold">Average Speed Ladder
         </h3>
         {{#each sortedByAverage}}
-        <div class="w-64 mt-4 mb-4 ml-10 mr-10 p-2 bg-white shadow rounded-lg text-center text-black no-underline">
-          <h3 class="pt-4 pb-4 text-black uppercase text-base font-bold">
+        <div class="w-64 mt-6 mb-4 ml-10 mr-10 p-2 bg-white shadow rounded-lg text-center text-black no-underline">
+          <h3 class="pt-4 pb-4 bg-teal-lightest rounded-full text-black uppercase text-base font-bold">
             {{ name }}
           </h3>
           <section class="flex flex-wrap border text-center border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">
