:lipstick::construction: dev - Spruce up aesthetics and re-work edit account page :construction::lipstick:

--- a/views/times.html
+++ b/views/times.html
@@ -37,7 +37,9 @@
       style="width: 1000px; height: auto"
       class="mx-auto mt-16 pt-4 flex flex-col justify-center "
     >
-    <h2 class="text-center border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"">Your Jogger Stats</h2>
+    <section class="border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">
+    </section>
+    <h2 class="ml-8 mr-8 text-center bg-green-lightest pt-4 pb-4 rounded-full">Your Jogger Stats</h2>
 
     <section
         class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"
@@ -46,7 +48,7 @@
     
       <section class="flex items-center">
         <div
-          class="m-4 p-6 rounded-lg bg-white flex-1 shadow flex flex-col-reverse"
+          class="m-8 p-6 rounded-lg bg-indigo-lightest flex-1 shadow flex flex-col-reverse"
         >
           <h3 class="uppercase text-sm text-indigo-light font-semibold">
             Total Distance
@@ -58,7 +60,7 @@
         </div>
 
         <div
-          class="m-4 p-6 rounded-lg bg-white flex-1 shadow flex flex-col-reverse"
+          class="m-8 p-6 rounded-lg bg-blue-lightest flex-1 shadow flex flex-col-reverse"
         >
           <h3 class="uppercase text-sm text-blue-light font-semibold">
             Total Time
@@ -70,7 +72,7 @@
         </div>
 
         <div
-          class="m-4 p-6 rounded-lg bg-white flex-1 shadow flex flex-col-reverse"
+          class="m-8 p-6 rounded-lg bg-teal-lightest flex-1 shadow flex flex-col-reverse"
         >
           <h3 class="uppercase text-sm text-teal-light font-semibold">
             Average Speed
@@ -82,7 +84,9 @@
         </div>
       </section>
 
-      <h2 class="text-center border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"">Your Jogger Times</h2>
+      <section class="border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"></section>
+
+      <h2 class="ml-8 mr-8 text-center bg-green-lightest pt-4 pb-4 rounded-full">Your Jogger Times</h2>
 
       <section
         class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"
@@ -128,6 +132,7 @@
         </a>
         {{/each}}
       </section>
+      <section class="border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"></section>
     </main>
   </body>
 </html>
