--- a/views/friends.html
+++ b/views/friends.html
@@ -38,7 +38,10 @@
       class="mx-auto mt-16 pt-4 flex flex-col justify-center "
     >
 
-    <h2 class="text-center border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"">You are following</h2>
+    <section class="border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"></section>
+    
+    <h2 class="ml-8 mr-8 text-center bg-indigo-lightest pt-4 pb-4 rounded-full">You are following</h2>
+
     <section
         class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"
       >
@@ -46,7 +49,7 @@
       <div
         class="w-1/4 mt-4 mb-4 ml-10 mr-10 p-5 bg-white shadow rounded-lg text-center text-black no-underline"
       >
-        <h3 class="text-grey-darker uppercase text-base font-semibold">
+        <h3 class="text-grey-darker pt-4 pb-4 bg-indigo-lighter rounded-full uppercase text-base font-semibold">
           {{ name }}
         </h3>
             <a class="block no-underline w-24 text-center rounded-full bg-indigo text-white p-2 mt-4 ml-auto hover:bg-indigo-darkest"
@@ -55,7 +58,10 @@
       {{/each}}
       </section>
 
-      <h2 class="text-center border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">Joggers Following You</h2>
+      <section class="border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"></section>
+      
+      <h2 class="ml-8 mr-8 text-center bg-indigo-lightest pt-4 pb-4 rounded-full">Joggers Following You</h2>
+
       <section
         class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"
       >
@@ -63,12 +69,13 @@
       <div
         class="w-1/4 mt-4 mb-4 ml-10 mr-10 pt-10 pb-12 bg-white shadow rounded-lg text-center text-black no-underline"
       >
-        <h3 class="text-grey-darker uppercase text-base font-semibold">
+        <h3 class="text-grey-darker ml-6 mr-6 pt-4 pb-4 bg-indigo-lighter rounded-full uppercase text-base font-semibold">
           {{ name }}
         </h3>
       </div>
       {{/each}}
       </section>
+      <section class="border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"></section>
     </main>
   </body>
 </html>
