--- a/views/members.html
+++ b/views/members.html
@@ -37,7 +37,9 @@
       style="width: 1000px; height: auto"
       class="mx-auto mt-16 pt-4 flex flex-col justify-center "
     >
-    <h2 class="text-center border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"">Members you can follow</h2>
+    <section class="border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"></section>
+    
+    <h2 class="ml-8 mr-8 text-center bg-orange-lightest pt-4 pb-4 rounded-full">Members you can follow</h2>
 
     <section
         class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"
@@ -46,7 +48,7 @@
         <div
           class="w-1/4 mt-4 mb-4 ml-10 mr-10 p-5 bg-white shadow text-center rounded-lg text-black no-underline"
         >
-          <h3 class="text-grey-darker uppercase text-base font-semibold">
+          <h3 class="text-grey-darker pt-4 pb-4 bg-orange-lighter rounded-full uppercase text-base font-semibold">
             {{ name }}
           </h3>
               <a class="block no-underline w-24 text-center rounded-full bg-orange-dark text-white p-2 mt-4 ml-auto hover:bg-orange-darkest"
@@ -55,15 +57,19 @@
         </div>
         {{/each}}
       </section>
-    <h2 class="text-center border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"">Members you are following</h2>
-    <section
+
+    <section class="border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"></section>
+    
+    <h2 class="ml-8 mr-8 text-center bg-orange-lightest pt-4 pb-4 rounded-full">Members you are following</h2>
+    
+      <section
         class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"
       >
         {{#each following}}
         <div
           class="w-1/4 mt-4 mb-4 ml-10 mr-10 p-5 bg-white shadow text-center rounded-lg text-black no-underline"
         >
-          <h3 class="text-grey-darker uppercase text-base font-semibold">
+          <h3 class="text-grey-darker pt-4 pb-4 bg-orange-lighter rounded-full uppercase text-base font-semibold">
             {{ name }}
           </h3>
               <a class="block no-underline w-24 text-center rounded-full bg-orange-dark text-white p-2 mt-4 ml-auto hover:bg-orange-darkest"
@@ -72,6 +78,7 @@
         </div>
         {{/each}}
       </section>
+      <section class="border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"></section>
     </main>
   </body>
 </html>
