--- a/views/ranking.html
+++ b/views/ranking.html
@@ -28,7 +28,9 @@
 
   <main style="width: 1000px; height: auto" class="mx-auto mt-16 pt-4 flex flex-col justify-center ">
 
-    <h2 class="text-center border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">Jogger Rankings</h2>
+    <section class="text-center border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"></section>
+    
+    <h2 class="ml-8 mr-8 text-center bg-teal-lightest pt-4 pb-4 rounded-full">Jogger Rankings</h2>
 
     <section class="flex flex-wrap border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6">
 
@@ -97,6 +99,7 @@
         {{/each}}
       </div>
     </section>
+    <section class="text-center border border-grey-light border-l-0 border-r-0 border-b-0 mt-6 pt-6"></section>
   </main>
 </body>
 
